--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 * {
   margin: 0px;
